[package]

name = "i2cdev"
version = "0.4.4"
authors = ["Paul Osborne <osbpau@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-embedded/rust-i2cdev"
homepage = "https://github.com/rust-embedded/rust-i2cdev"
documentation = "https://docs.rs/i2cdev"
readme = "README.md"
description = """
Provides API for safe access to Linux i2c device interface.
"""

[dependencies]
libc = "0.2"
bitflags = "1"
byteorder = "1"
nix = "0.14"

[dev-dependencies]
docopt = "1"

