[package]

name = "i2cdev"
version = "0.4.4"
authors = ["Paul Osborne <osbpau@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-embedded/rust-i2cdev"
homepage = "https://github.com/rust-embedded/rust-i2cdev"
documentation = "https://docs.rs/i2cdev"
readme = "README.md"
keywords = ["linux"]
categories = ["embedded", "hardware-support"]
description = """
Provides API for safe access to Linux i2c device interface.
"""

[dependencies]
libc = "0.2"
bitflags = "1.3"
byteorder = "1"
nix = "0.22"

[dev-dependencies]
docopt = "1"

