[package]

name = "i2cdev"
version = "0.5.1"
authors = [
    "Paul Osborne <osbpau@gmail.com>",
    "The Embedded Linux Team <embedded-linux@teams.rust-embedded.org>"
]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-embedded/rust-i2cdev"
homepage = "https://github.com/rust-embedded/rust-i2cdev"
documentation = "https://docs.rs/i2cdev"
readme = "README.md"
keywords = ["linux"]
categories = ["embedded", "hardware-support"]
description = """
Provides API for safe access to Linux i2c device interface.
"""

[dependencies]
libc = "0.2"
bitflags = "2.3"
byteorder = "1"
nix = { version = "0.26.2", default-features = false, features = ["ioctl"] }

[dev-dependencies]
docopt = "1"
